src/test/resources/shexTest/negativeStructure/Cycle1Negation3.shex
PREFIX :       <http://example.org/>

:S { :a NOT { :b @:S } }
